<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.3"
        android:contentDescription="@string/crmRally"
        android:scaleType="centerCrop"
        android:src="@drawable/crmimage" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".MainActivity">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/firstSentence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:text="@string/instruction" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/question1"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/radioQuestion1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/optionBackground">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option1.a" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option1.b"

                        />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option1.c" />
                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_margin="16dp"
                    android:background="@color/buttonColour"
                    android:paddingBottom="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/question2"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/radioQuestion2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/optionBackground">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option2.a" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option2.b" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option2.c" />
                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_margin="16dp"
                    android:background="@color/buttonColour"
                    android:paddingBottom="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/question3"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/radioQuestion3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/optionBackground">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option3.a" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option3.b"

                        />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option3.c" />
                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_margin="16dp"
                    android:background="@color/buttonColour"
                    android:paddingBottom="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/question4"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/radioQuestion4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/optionBackground"

                    >

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option4.a" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option4.b"

                        />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option4.c" />
                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_margin="16dp"
                    android:background="@color/buttonColour"
                    android:paddingBottom="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/question5"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/radioQuestion5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/optionBackground">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option5.a" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option5.b" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option5.c" />
                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_margin="16dp"
                    android:background="@color/buttonColour"
                    android:paddingBottom="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/question6"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/radioQuestion6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/optionBackground">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option6.a" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option6.b"

                        />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option6.c" />
                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_margin="16dp"
                    android:background="@color/buttonColour"
                    android:paddingBottom="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/question7"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/radioQuestion7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/optionBackground">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option7.a" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option7.b"

                        />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option7.c" />
                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_margin="16dp"
                    android:background="@color/buttonColour"
                    android:paddingBottom="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/question8"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/radioQuestion8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/optionBackground">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option8.a" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option8.b" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option8.c" />
                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_margin="16dp"
                    android:background="@color/buttonColour"
                    android:paddingBottom="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/question9"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/CrowtherBailey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/optionBackground"
                    android:text="@string/option9.a" />

                <CheckBox
                    android:id="@+id/HueyNewton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/optionBackground"
                    android:text="@string/option9.b" />

                <CheckBox
                    android:id="@+id/BobbySeale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/optionBackground"
                    android:text="@string/option9.c" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_margin="16dp"
                    android:background="@color/buttonColour"
                    android:paddingBottom="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/question10"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/question10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/optionBackground"
                    android:hint="@string/hint"
                    android:inputType="textCapWords" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="gradeButton"
                        android:text="@string/gradeMe"
                        android:textSize="16sp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:onClick="reset"
                        android:text="@string/reset"
                        android:textSize="16sp" />
                </RelativeLayout>
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>